# products-api

./: Cargo.toml  README.md  seed_products.json
src/: errors.rs  main.rs
src/dto/: product_dto.rs
src/handlers/: product_handler.rs
src/models/: product.rs
src/repository/: product_repository.rs
src/routes/: product_router.rs
src/validations/: mod.rs  product_validations.rs
